@@ -1,0 +1,10 @@
+//---------------------------------------------------------------------------------------
+//  $Id$
+//  Copyright (c) 2013 by Mulle Kybernetik. See License file for details.
+//---------------------------------------------------------------------------------------
+
+#import <SenTestingKit/SenTestingKit.h>
+
+@interface OCMockForwardingTargetTests : SenTestCase
+
+@end
